load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = [
        "command_wrapper.go",
        "readiness_command_runner.go",
    ],
    importpath = "github.com/meroton/buildbar/pkg/runner",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/runner",
        "@com_github_buildbarn_bb_remote_execution//pkg/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
