load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = ["proto_to_json.go"],
    importpath = "github.com/meroton/buildbar/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)
