load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "configuration",
    srcs = ["build_event_server_creator.go"],
    importpath = "github.com/meroton/buildbar/pkg/buildevents/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazelevents",
        "//pkg/buildevents",
        "//pkg/elasticsearch",
        "//proto/configuration/buildevents",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
