load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "buildevents_proto",
    srcs = ["buildevents.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/configuration/elasticsearch:elasticsearch_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "buildevents_go_proto",
    importpath = "github.com/meroton/buildbar/proto/configuration/buildevents",
    proto = ":buildevents_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/configuration/elasticsearch",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
    ],
)

go_library(
    name = "buildevents",
    embed = [":buildevents_go_proto"],
    importpath = "github.com/meroton/buildbar/proto/configuration/buildevents",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "buildevents_go_proto_pb_go",
    srcs = [":buildevents_go_proto"],
    output_group = "go_generated_srcs",
)

write_source_file(
    name = "buildevents_pb_go",
    in_file = ":buildevents_go_proto_pb_go",
    out_file = "buildevents.pb.go",
)
