load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bb_completed_actions_ingester_proto",
    srcs = ["bb_completed_actions_ingester.proto"],
    import_prefix = "github.com/meroton/buildbar",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/elasticsearch:elasticsearch_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/zstd:zstd_proto",
    ],
)

go_proto_library(
    name = "bb_completed_actions_ingester_go_proto",
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/bb_completed_actions_ingester",
    proto = ":bb_completed_actions_ingester_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/elasticsearch",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/zstd",
    ],
)

go_library(
    name = "bb_completed_actions_ingester",
    embed = [":bb_completed_actions_ingester_go_proto"],
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/bb_completed_actions_ingester",
    visibility = ["//visibility:public"],
)
