load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bb_slow_generic_runner_proto",
    srcs = ["bb_slow_generic_runner.proto"],
    import_prefix = "github.com/meroton/buildbar",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
    ],
)

go_proto_library(
    name = "bb_slow_generic_runner_go_proto",
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/bb_slow_generic_runner",
    proto = ":bb_slow_generic_runner_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
    ],
)

go_library(
    name = "bb_slow_generic_runner",
    embed = [":bb_slow_generic_runner_go_proto"],
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/bb_slow_generic_runner",
    visibility = ["//visibility:public"],
)
