load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "elasticsearch_proto",
    srcs = ["elasticsearch.proto"],
    import_prefix = "github.com/meroton/buildbar",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "elasticsearch_go_proto",
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/elasticsearch",
    proto = ":elasticsearch_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "elasticsearch",
    embed = [":elasticsearch_go_proto"],
    importpath = "github.com/meroton/buildbar/pkg/proto/configuration/elasticsearch",
    visibility = ["//visibility:public"],
)
